--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "engines": {
     "node": ">=0.10.0"
   },
+  "scripts": {
+    "test": "node test.js"
+  },
   "files": [
     "index.js"
   ],
@@ -20,5 +23,11 @@
     "check",
     "detect",
     "opera"
-  ]
+  ],
+  "dependencies": {
+    "array-contains": "0.0.1"
+  },
+  "devDependencies": {
+    "ava": "0.0.4"
+  }
 }
