--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "index.js"
   ],
   "keywords": [
+    "agent",
     "browser",
     "check",
     "detect",
-    "opera"
+    "opera",
+    "test",
+    "useragent"
   ],
   "dependencies": {
-    "array-contains": "0.0.1"
+    "array-contains": "^0.0.1"
   },
   "devDependencies": {
-    "ava": "0.0.4"
+    "ava": "^0.0.4"
   }
 }
